package interfaces;

public interface Contable {
    void cambiar();
    int getValor();
    void setValor(int valor);
}
